syntax = "proto3";
package types;

import "util.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

service SockService {
  rpc GetSocketTicket(GetSocketTicketRequest) returns (GetSocketTicketResponse) {
    option (google.api.http) = {
      get: "/v1/sock/ticket"
    };
    option (cache) = SKIP;
  }
}

enum SocketActions {
  PING_CHANNEL = 0;
  START_STREAM = 1;
  STOP_STREAM = 2;
  STREAM_INQUIRY = 3;
  UNSUBSCRIBE_TOPIC = 4;
  SUBSCRIBE_TOPIC = 5;
  LOAD_MESSAGES = 6;
  HAS_MORE_MESSAGES = 7;
  SUBSCRIBE = 8;
  UNSUBSCRIBE = 9;
  LOAD_SUBSCRIBERS = 10;
  SUBSCRIBERS_PRESENT = 11;
  TEXT = 12;
  RTC = 13;
  SET_POSITION = 14;
  SET_PAGE = 15;
  SET_SCALE = 16;
  SET_STROKE = 17;
  DRAW_LINES = 18;
  SHARE_FILE = 19;
  CHANGE_SETTING = 20;
  SUBSCRIBE_INIT = 21;
  SET_SELECTED_TEXT = 22;
  ROLE_CALL = 23;
  PING_PONG = 24;
  SET_BOX = 25;
}

enum ExchangeActions {
  EXCHANGE_TEXT = 0;
  EXCHANGE_CALL = 1;
  EXCHANGE_WHITEBOARD = 2;
}

message Subscriber {
  map<string, string> tickets = 1;
  map<string, string> subscribedTopics = 2;
  string userSub = 3;
  string groupId = 4;
  string connectionId = 5;
  string connectionIds = 6;
  int32 roleBits = 7;
}

message SocketParticipant {
  repeated string cids = 1;
  string scid = 2;
  string name = 3;
  string role = 4;
  string color = 5;
  bool exists = 6;
  bool online = 7;
}

message SocketMessage {
  string topic = 1;
  string sender = 2;
  string payload = 3;
  string timestamp = 4;
  SocketActions action = 5;
  bool store = 6;
  bool historical = 7;
}

message SocketRequestParams {
  bytes messageBytes = 1;
  string userSub = 2;
  string groupId = 3;
  string ticket = 4;
  string topic = 5;
  string targets = 6;
  string connId = 7;
  int32 roleBits = 8;
}

message SocketResponseParams {
  string ticket = 1;
  string targets = 2;
  string userSub = 3;
  string groupId = 4;
  int32 roleBits = 5;
  bool hasSub = 6;
}

message GetSocketTicketRequest {}

message GetSocketTicketResponse {
  string ticket = 1 [(google.api.field_behavior) = REQUIRED];
}

